# django-receipts

./: .gitignore  README.md  README.rst  README_BRANCH.md  README_BRANCH.rst  boot_django.py  djangoshell.py  load_tests.py  makemigrations.py  migrate.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
000_before/sample_project/receipts/: admin.py  tests.py  views.py
000_before/sample_project/receipts/migrations/: 0001_initial.py
000_before/sample_project/sample_project/: settings.py  urls.py
receipts/: admin.py  apps.py  models.py  tests.py  views.py
sample_project/: requirements.txt  resetdb.sh
sample_project/receipts/: models.py  tests.py  urls.py  views.py
sample_project/receipts/fixtures/: receipts.json
sample_project/receipts/migrations/: 0001_initial.py
sample_project/sample_project/: settings.py  urls.py
src/receipts/: admin.py  apps.py  models.py  tests.py  urls.py
src/receipts/fixtures/: receipts.json
