[metadata]
name = realpython-django-receipts
version = 1.0.4
description = Sample installable django app
long_description = file:README.rst
url = https://github.com/realpython/django-receipts
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires = 
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
test_suite = load_tests.get_suite
