[metadata]
name = realpython-django-receipts
version = 1.1.0
description = Sample installable django app
long_description = file:README.rst
url = https://github.com/realpython/django-receipts
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.2

[options.extras_require]
dev =
    build==1.0.3
    nox==2023.4.22
    twine==4.0.2

[testenv]
commands = python -m unittest
deps = .[dev]
